# nlprule

./: .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  chunk.py  knowledge.md  output.xml  setup.cfg
.github/workflows/: ci.yml  matrix_includes.json
bench/: __init__.py  requirements.txt
binaries/: README.md
bindings/python/: Cargo.toml  test.py
bindings/python/src/: lib.rs
configs/de/: rules.json  tokenizer.json
configs/en/: rules.json  tokenizer.json
configs/es/: rules.json
core/: Cargo.toml  README.md  languages.txt
core/configs/en/: rules.json  tokenizer.json
core/configs/es/: tokenizer.json
core/src/: lib.rs  rules.rs
core/src/compile/: mod.rs  utils.rs
core/src/rule/: grammar.rs
core/src/tokenizer/: multiword.rs  tag.rs
core/src/utils/: parallelism.rs
data/de/: disambiguator_options.json  rules_options.json  tokenizer_options.json
data/en/: disambiguator_options.json  rules_options.json  tagger_options.json
data/es/: disambiguator_options.json  rules_options.json  tagger_options.json  tokenizer_options.json
examples/: README.md  correct_nlg.py
nlprule/: Cargo.toml  build.rs
nlprule/benches/: load.rs
nlprule/configs/de/: spellchecker.json  tagger.json  tokenizer.json
nlprule/configs/en/: rules.json  spellchecker.json  tagger.json  tokenizer.json
nlprule/configs/es/: spellchecker.json  tagger.json  tokenizer.json
nlprule/src/: composition.rs  lang.rs  lib.rs  properties.rs  rules.rs  structure.rs  tokenizer.rs  types.rs  utils.rs
nlprule/src/compile/: impls.rs  mod.rs  parse_structure.rs  structure.rs  utils.rs
nlprule/src/components/: mod.rs
nlprule/src/components/chunker/: compile.rs  mod.rs
nlprule/src/components/multiword_tagger/: compile.rs  mod.rs
nlprule/src/components/rules/: mod.rs
nlprule/src/components/rules/compile/: mod.rs
nlprule/src/components/rules/compile/structure/: impls.rs  mod.rs  parse.rs
nlprule/src/components/tagger/: compile.rs  mod.rs
nlprule/src/components/tokenizer/: compile.rs  mod.rs
nlprule/src/filter/: mod.rs
nlprule/src/from_structure/: mod.rs  structure.rs
nlprule/src/lang/: de.rs  en.rs  es.rs
nlprule/src/rule/: disambiguation.rs  from_structure.rs  grammar.rs  id.rs  mod.rs
nlprule/src/rule/engine/: composition.rs  mod.rs
nlprule/src/rule/from_structure/: mod.rs  structure.rs
nlprule/src/spell/: levenshtein.rs  mod.rs
nlprule/src/spellcheck/: levenshtein.rs  mod.rs
nlprule/src/tokenizer/: chunk.py  chunk.rs  multiword.rs  opennlp_chunk.rs  serialize_chunker.py  tag.rs
nlprule/src/utils/: mod.rs  parallelism.rs  regex.rs
nlprule/tests/: tests.rs
python/: Cargo.toml  test.py
python/src/: lib.rs
request/: Cargo.toml  README.md
request/src/: lib.rs
scripts/: approximate_rules.sh  build.sh  build_and_test.sh  make_frequency_list.py  maturin.sh  set_version.sh  setup.sh
seqrule/: Cargo.toml
seqrule/examples/: simple.rs
seqrule/src/: lib.rs
src/: composition.rs  lib.rs  structure.rs  tokenizer.rs  utils.rs
src/filter/: mod.rs
src/rule/: from_structure.rs  mod.rs
src/tokenizer/: chunk.py  chunk.rs  disambiguate.rs  inflect.rs  language_specific.rs  tag.rs
src/tokenizer/train-chunker/: .gitignore  dataset.py  train.py
