[package]
name = "nlprule"
version = "0.1.0"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs/" }
xml-rs = "0.8.3"
roxmltree = "0.13.0"
log = "0.4.11"
onig = "6.1.0"
lazy_static = "1.4.0"
unicode-segmentation = "1.6.0"
thiserror = "1.0.20"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
either = "1.6"
itertools = "0.9.0"

# model inference, would like to change to tract at some point
fasthash = "0.4.0"
tract-onnx = "0.10"