[package]
name = "nlprule"
version = "0.4.0-dev"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlprule-core = { path = "../core" }
bincode = "1"

[build-dependencies]
nlprule-core = {path = "../core", features = ["compile", "bin"] }
nlprule-request = {path = "../request" }
directories = "3.0"

[features]
# feature to enable binaries being inlined
binaries = []