[package]
name = "nlprule"
version = "0.4.0-dev"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A fast, low-resource Natural Language Processing and Error Correction library."
repository = "https://github.com/bminixhofer/nlprule"
keywords = ["text", "spelling", "language-processing", "nlp", "grammar"]
categories = ["science", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nlprule-core = { path = "../core" }
bincode = "1"

[build-dependencies]
nlprule-core = {path = "../core", features = ["compile", "bin"] }
nlprule-request = {path = "../request" }
directories = "3.0"

[features]
# feature to enable binaries being inlined
binaries = []

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]