[package]
name = "nlprule-python" # BUILD_BINDINGS_COMMENT
# name = "nlprule" # BUILD_BINDINGS_UNCOMMENT
version = "0.6.2"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

[lib]
name = "nlprule"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
parking_lot = { version = "0.11", features = ["serde"] }
reqwest = { version = "0.11", default_features = false, features = ["blocking", "rustls-tls"]}
flate2 = "1"
directories = "3"
syn = "=1.0.57" # workaround for "could not find `export` in `syn`" by enum_dispatch
nlprule = { path = "../nlprule" } # BUILD_BINDINGS_COMMENT
# nlprule = { package = "nlprule-core", path = "../nlprule" } # BUILD_BINDINGS_UNCOMMENT

[dependencies.pyo3]
version = "0.13"
# features = ["extension-module"] # BUILD_BINDINGS_UNCOMMENT