# not part of the workspace because of name conflicts
[workspace]

[package]
name = "nlprule"
version = "0.4.0-dev"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

[lib]
name = "nlprule"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
reqwest = { version = "0.11", default_features = false, features = ["blocking", "rustls-tls"]}
flate2 = "1"
directories = "3"
syn = "=1.0.57" # workaround for "could not find `export` in `syn`" by enum_dispatch
nlprule-core = { path = "../../core" }

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1